deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-img-resize
spec:
  selector:
    app: web-img-resize
  ports:
    - port: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-img-resize
  labels:
    app: web-img-resize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-img-resize
  template:
    metadata:
      labels:
        app: web-img-resize
    spec:
      containers:
        - name: web-img-resize
          image: danieldocke/nginx-v2:2.0
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 1Gi
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          volumeMounts:
            - name: nginx-cors
              mountPath: /etc/nginx/cors.conf
              subPath: cors.conf
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-cors
          configMap:
            name: nginx-cors
        - name: nginx-config
          configMap:
            name: nginx-config
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-img-resize
spec:
  host: resize.primer-test.apps-crc.testing
  #host: lala.192.168.130.11.nip.io
  path: /webposter
  to:
    kind: Service
    name: web-img-resize
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
